--- a/archives/toutiao-search/2023-12-19.md
+++ b/archives/toutiao-search/2023-12-19.md
@@ -1,58 +1,74 @@
 # 2023-12-19
 
-共 384 条
+共 394 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Tue Dec 19 2023 21:07:27 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Tue Dec 19 2023 22:00:37 GMT+0800 (China Standard Time) -->
 1. [甘肃地震已致127人遇难](https://so.toutiao.com/search?keyword=甘肃地震已致127人遇难)
 1. [甘肃6.2级地震瞬间：砖块如雨落下](https://so.toutiao.com/search?keyword=甘肃6.2级地震瞬间：砖块如雨落下)
 1. [从2023年“展会热”看外企追赶中国机遇](https://so.toutiao.com/search?keyword=从2023年“展会热”看外企追赶中国机遇)
-1. [男子拆快递时意外收到2箱现金](https://so.toutiao.com/search?keyword=男子拆快递时意外收到2箱现金)
+1. [韩红等多位明星为甘肃地震捐款捐物](https://so.toutiao.com/search?keyword=韩红等多位明星为甘肃地震捐款捐物)
 1. [西北零下12度的地震救援难度有多大](https://so.toutiao.com/search?keyword=西北零下12度的地震救援难度有多大)
-1. [甘肃地震发布会现场向遇难同胞默哀](https://so.toutiao.com/search?keyword=甘肃地震发布会现场向遇难同胞默哀)
+1. [震区灾民痛哭 青海省委书记抱着安慰](https://so.toutiao.com/search?keyword=震区灾民痛哭+青海省委书记抱着安慰)
 1. [24小时直击甘肃地震救援现场](https://so.toutiao.com/search?keyword=24小时直击甘肃地震救援现场)
-1. [空军运-20抵达甘肃](https://so.toutiao.com/search?keyword=空军运-20抵达甘肃)
+1. [甘肃地震发布会现场向遇难同胞默哀](https://so.toutiao.com/search?keyword=甘肃地震发布会现场向遇难同胞默哀)
 1. [合肥地铁系统瘫痪？男子造谣被拘](https://so.toutiao.com/search?keyword=合肥地铁系统瘫痪？男子造谣被拘)
-1. [旺旺集团宣布向甘肃地震灾区捐款](https://so.toutiao.com/search?keyword=旺旺集团宣布向甘肃地震灾区捐款)
-1. [地震时宿舍大门紧闭 学生砸门逃生](https://so.toutiao.com/search?keyword=地震时宿舍大门紧闭+学生砸门逃生)
-1. [王诗龄回京过圣诞 吃400元3个包子](https://so.toutiao.com/search?keyword=王诗龄回京过圣诞+吃400元3个包子)
-1. [“南京过江隧道多车连环追尾”不实](https://so.toutiao.com/search?keyword=“南京过江隧道多车连环追尾”不实)
-1. [解清帅直播助力寻子家长](https://so.toutiao.com/search?keyword=解清帅直播助力寻子家长)
+1. [男子拆快递时意外收到2箱现金](https://so.toutiao.com/search?keyword=男子拆快递时意外收到2箱现金)
 1. [甘肃6.2级地震为何破坏力这么大](https://so.toutiao.com/search?keyword=甘肃6.2级地震为何破坏力这么大)
 1. [阿曼试图说服胡塞武装停止袭击商船](https://so.toutiao.com/search?keyword=阿曼试图说服胡塞武装停止袭击商船)
-1. [韩红等多位明星为甘肃地震捐款捐物](https://so.toutiao.com/search?keyword=韩红等多位明星为甘肃地震捐款捐物)
+1. [“南京过江隧道多车连环追尾”不实](https://so.toutiao.com/search?keyword=“南京过江隧道多车连环追尾”不实)
+1. [旺旺集团宣布向甘肃地震灾区捐款](https://so.toutiao.com/search?keyword=旺旺集团宣布向甘肃地震灾区捐款)
+1. [军媒评女子骚扰哨兵：哨兵不可侵犯](https://so.toutiao.com/search?keyword=军媒评女子骚扰哨兵：哨兵不可侵犯)
+1. [飞贼国资委大楼窃名烟 一半是假的](https://so.toutiao.com/search?keyword=飞贼国资委大楼窃名烟+一半是假的)
 1. [高校回应宿舍地震时门打不开](https://so.toutiao.com/search?keyword=高校回应宿舍地震时门打不开)
+1. [空军运-20抵达甘肃](https://so.toutiao.com/search?keyword=空军运-20抵达甘肃)
+1. [新疆克州阿图什市发生5.5级地震](https://so.toutiao.com/search?keyword=新疆克州阿图什市发生5.5级地震)
+1. [苹果CEO库克宣布将捐款驰援甘肃](https://so.toutiao.com/search?keyword=苹果CEO库克宣布将捐款驰援甘肃)
+1. [地震时宿舍大门紧闭 学生砸门逃生](https://so.toutiao.com/search?keyword=地震时宿舍大门紧闭+学生砸门逃生)
+1. [王诗龄回京过圣诞 吃400元3个包子](https://so.toutiao.com/search?keyword=王诗龄回京过圣诞+吃400元3个包子)
+1. [网红倪海杉甘肃地震捐款100万](https://so.toutiao.com/search?keyword=网红倪海杉甘肃地震捐款100万)
 1. [中方回应菲总统称菲中关系走错方向](https://so.toutiao.com/search?keyword=中方回应菲总统称菲中关系走错方向)
-1. [演员于洋家中存放大量金砖](https://so.toutiao.com/search?keyword=演员于洋家中存放大量金砖)
+1. [美国会对胡塞武装开战吗](https://so.toutiao.com/search?keyword=美国会对胡塞武装开战吗)
+1. [用户称地震时7部苹果手机均无预警](https://so.toutiao.com/search?keyword=用户称地震时7部苹果手机均无预警)
 1. [疯狂小杨哥向甘肃灾区捐款](https://so.toutiao.com/search?keyword=疯狂小杨哥向甘肃灾区捐款)
+1. [黄百鸣晒与周海媚合照](https://so.toutiao.com/search?keyword=黄百鸣晒与周海媚合照)
 1. [地震瞬间烤肉店主大喊客人成功避险](https://so.toutiao.com/search?keyword=地震瞬间烤肉店主大喊客人成功避险)
+1. [东北人买肉有多豪横](https://so.toutiao.com/search?keyword=东北人买肉有多豪横)
+1. [演员于洋家中存放大量金砖](https://so.toutiao.com/search?keyword=演员于洋家中存放大量金砖)
+1. [航拍积石山震中村庄](https://so.toutiao.com/search?keyword=航拍积石山震中村庄)
+1. [曝小米SU7取消侧向激光雷达](https://so.toutiao.com/search?keyword=曝小米SU7取消侧向激光雷达)
+1. [俄总理抵达北京 中国副外长接机](https://so.toutiao.com/search?keyword=俄总理抵达北京+中国副外长接机)
+1. [男子地震时抱孩子冲进厕所保护妻子](https://so.toutiao.com/search?keyword=男子地震时抱孩子冲进厕所保护妻子)
+1. [张雪峰：这个天骑电动车确实有点冷](https://so.toutiao.com/search?keyword=张雪峰：这个天骑电动车确实有点冷)
+1. [台媒体人：赖清德哭断“大选”路](https://so.toutiao.com/search?keyword=台媒体人：赖清德哭断“大选”路)
+1. [酥饼店连夜做5000个饼支援震区](https://so.toutiao.com/search?keyword=酥饼店连夜做5000个饼支援震区)
+1. [国内油价将迎来6连降](https://so.toutiao.com/search?keyword=国内油价将迎来6连降)
+1. [亲绿名嘴谈赖清德老家违建时哭了](https://so.toutiao.com/search?keyword=亲绿名嘴谈赖清德老家违建时哭了)
+1. [新东方捐款1000万援助甘肃](https://so.toutiao.com/search?keyword=新东方捐款1000万援助甘肃)
+1. [大雪撕下了新能源汽车的遮羞布？](https://so.toutiao.com/search?keyword=大雪撕下了新能源汽车的遮羞布？)
+1. [朱丹“被骗”事件始末](https://so.toutiao.com/search?keyword=朱丹“被骗”事件始末)
+1. [鸿星尔克向甘肃捐赠2000万物资](https://so.toutiao.com/search?keyword=鸿星尔克向甘肃捐赠2000万物资)
+1. [柯文哲劝赖清德拆掉老家违建](https://so.toutiao.com/search?keyword=柯文哲劝赖清德拆掉老家违建)
+1. [俄士兵阵亡前留在墙上的遗言曝光](https://so.toutiao.com/search?keyword=俄士兵阵亡前留在墙上的遗言曝光)
+1. [地震时如果我们正在睡觉该怎么办](https://so.toutiao.com/search?keyword=地震时如果我们正在睡觉该怎么办)
+1. [小米辞退三名违规员工 永不录用](https://so.toutiao.com/search?keyword=小米辞退三名违规员工+永不录用)
+1. [恒大地产再被强执9.6亿](https://so.toutiao.com/search?keyword=恒大地产再被强执9.6亿)
+1. [男生数秒给舍友庆生变“地震倒计时”](https://so.toutiao.com/search?keyword=男生数秒给舍友庆生变“地震倒计时”)
+1. [解清帅直播助力寻子家长](https://so.toutiao.com/search?keyword=解清帅直播助力寻子家长)
 1. [董明珠曾建议立法对员工跳槽收培训费](https://so.toutiao.com/search?keyword=董明珠曾建议立法对员工跳槽收培训费)
 1. [外媒：中企看上马来西亚芯片封装](https://so.toutiao.com/search?keyword=外媒：中企看上马来西亚芯片封装)
-1. [网红倪海杉甘肃地震捐款100万](https://so.toutiao.com/search?keyword=网红倪海杉甘肃地震捐款100万)
-1. [新疆克州阿图什市发生5.5级地震](https://so.toutiao.com/search?keyword=新疆克州阿图什市发生5.5级地震)
 1. [男子报警称自己的直升飞机仪表被偷](https://so.toutiao.com/search?keyword=男子报警称自己的直升飞机仪表被偷)
-1. [用户称地震时7部苹果手机均无预警](https://so.toutiao.com/search?keyword=用户称地震时7部苹果手机均无预警)
-1. [朱丹“被骗”事件始末](https://so.toutiao.com/search?keyword=朱丹“被骗”事件始末)
-1. [飞贼国资委大楼窃名烟 一半是假的](https://so.toutiao.com/search?keyword=飞贼国资委大楼窃名烟+一半是假的)
 1. [湖南救援队出发奔赴甘肃地震灾区](https://so.toutiao.com/search?keyword=湖南救援队出发奔赴甘肃地震灾区)
 1. [上海警方通报女子言语滋扰执勤武警](https://so.toutiao.com/search?keyword=上海警方通报女子言语滋扰执勤武警)
 1. [董明珠称年轻人不该以自我为中心](https://so.toutiao.com/search?keyword=董明珠称年轻人不该以自我为中心)
-1. [航拍积石山震中村庄](https://so.toutiao.com/search?keyword=航拍积石山震中村庄)
 1. [朱丹是肖战妈粉吧](https://so.toutiao.com/search?keyword=朱丹是肖战妈粉吧)
 1. [乌军总司令证实发现窃听装置](https://so.toutiao.com/search?keyword=乌军总司令证实发现窃听装置)
 1. [翼龙-2H无人机飞赴甘肃救灾](https://so.toutiao.com/search?keyword=翼龙-2H无人机飞赴甘肃救灾)
-1. [大雪撕下了新能源汽车的遮羞布？](https://so.toutiao.com/search?keyword=大雪撕下了新能源汽车的遮羞布？)
 1. [什么是逆冲型地震](https://so.toutiao.com/search?keyword=什么是逆冲型地震)
-1. [鸿星尔克向甘肃捐赠2000万物资](https://so.toutiao.com/search?keyword=鸿星尔克向甘肃捐赠2000万物资)
 1. [中国地震带分布图](https://so.toutiao.com/search?keyword=中国地震带分布图)
-1. [国内油价将迎来6连降](https://so.toutiao.com/search?keyword=国内油价将迎来6连降)
-1. [新东方捐款1000万援助甘肃](https://so.toutiao.com/search?keyword=新东方捐款1000万援助甘肃)
-1. [美国会对胡塞武装开战吗](https://so.toutiao.com/search?keyword=美国会对胡塞武装开战吗)
 1. [军营大厨手把手教你萝卜炖羊肉](https://so.toutiao.com/search?keyword=军营大厨手把手教你萝卜炖羊肉)
 1. [地震亲历者：亲戚里有小孩老人去世](https://so.toutiao.com/search?keyword=地震亲历者：亲戚里有小孩老人去世)
-1. [俄总理抵达北京 中国副外长接机](https://so.toutiao.com/search?keyword=俄总理抵达北京+中国副外长接机)
 1. [快递公司回应物资运输受地震影响](https://so.toutiao.com/search?keyword=快递公司回应物资运输受地震影响)
-1. [酥饼店连夜做5000个饼支援震区](https://so.toutiao.com/search?keyword=酥饼店连夜做5000个饼支援震区)
 1. [积石山县宋家沟村民：房子受损严重](https://so.toutiao.com/search?keyword=积石山县宋家沟村民：房子受损严重)
 1. [从这些数字看拼搏向前的中国](https://so.toutiao.com/search?keyword=从这些数字看拼搏向前的中国)
 1. [法学泰斗江平逝世](https://so.toutiao.com/search?keyword=法学泰斗江平逝世)
@@ -63,11 +79,7 @@
 1. [男子摔下月台喊救命 火车及时停下](https://so.toutiao.com/search?keyword=男子摔下月台喊救命+火车及时停下)
 1. [甘肃：参与救援的队伍请尽快报备](https://so.toutiao.com/search?keyword=甘肃：参与救援的队伍请尽快报备)
 1. [美宣布3亿美元对台军售 国防部回应](https://so.toutiao.com/search?keyword=美宣布3亿美元对台军售+国防部回应)
-1. [军媒评女子骚扰哨兵：哨兵不可侵犯](https://so.toutiao.com/search?keyword=军媒评女子骚扰哨兵：哨兵不可侵犯)
 1. [哈尔滨冰雪大世界致歉：连夜整改](https://so.toutiao.com/search?keyword=哈尔滨冰雪大世界致歉：连夜整改)
-1. [张雪峰：这个天骑电动车确实有点冷](https://so.toutiao.com/search?keyword=张雪峰：这个天骑电动车确实有点冷)
-1. [苹果CEO库克宣布将捐款驰援甘肃](https://so.toutiao.com/search?keyword=苹果CEO库克宣布将捐款驰援甘肃)
-1. [俄士兵阵亡前留在墙上的遗言曝光](https://so.toutiao.com/search?keyword=俄士兵阵亡前留在墙上的遗言曝光)
 1. [地震已造成青海海东14死198伤](https://so.toutiao.com/search?keyword=地震已造成青海海东14死198伤)
 1. [地震引发青海一村7户19人被埋](https://so.toutiao.com/search?keyword=地震引发青海一村7户19人被埋)
 1. [男生为舍友庆生突发地震跑操场避险](https://so.toutiao.com/search?keyword=男生为舍友庆生突发地震跑操场避险)
@@ -105,7 +117,6 @@
 1. [武警官兵紧急搜救转移群众](https://so.toutiao.com/search?keyword=武警官兵紧急搜救转移群众)
 1. [甘肃柳沟村：村民篝火取暖一夜未眠](https://so.toutiao.com/search?keyword=甘肃柳沟村：村民篝火取暖一夜未眠)
 1. [震区店主免费为救援人员提供牛肉面](https://so.toutiao.com/search?keyword=震区店主免费为救援人员提供牛肉面)
-1. [地震时如果我们正在睡觉该怎么办](https://so.toutiao.com/search?keyword=地震时如果我们正在睡觉该怎么办)
 1. [普京正式登记为总统候选人](https://so.toutiao.com/search?keyword=普京正式登记为总统候选人)
 1. [甘肃地震遇难人数已达118人](https://so.toutiao.com/search?keyword=甘肃地震遇难人数已达118人)
 1. [甘肃强震 全国多地网友收到预警](https://so.toutiao.com/search?keyword=甘肃强震+全国多地网友收到预警)
@@ -179,7 +190,6 @@
 1. [苹果停止在美销售部分Apple Watch](https://so.toutiao.com/search?keyword=苹果停止在美销售部分Apple+Watch)
 1. [外籍母子吞54个藏毒避孕套入境被捕](https://so.toutiao.com/search?keyword=外籍母子吞54个藏毒避孕套入境被捕)
 1. [农夫山泉连夜驰援甘肃地震灾区](https://so.toutiao.com/search?keyword=农夫山泉连夜驰援甘肃地震灾区)
-1. [黄百鸣晒与周海媚合照](https://so.toutiao.com/search?keyword=黄百鸣晒与周海媚合照)
 1. [两部门向甘肃青海预拨2亿救灾资金](https://so.toutiao.com/search?keyword=两部门向甘肃青海预拨2亿救灾资金)
 1. [甘肃地震24条受损农村公路均已打通](https://so.toutiao.com/search?keyword=甘肃地震24条受损农村公路均已打通)
 1. [小卡近10战场均29.4分6.6板](https://so.toutiao.com/search?keyword=小卡近10战场均29.4分6.6板)
